--- a/pages/clock animation/clock.html
+++ b/pages/clock animation/clock.html
@@ -1,20 +1,26 @@
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Live-Clock with Dynamic Greeting</title>
-    <link rel="stylesheet" href="./clock.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Passion+One:wght@700&family=Poppins&display=swap" rel="stylesheet">
+    <title>Live Clock || Assignment -11</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <main class="clock-container">
+        <div id="DisplayClock" class="Clock"></div>
+        <div id="user" class="user"></div>
+        <div class="focus-container">
+            <label for=""></label>
+        </div>
+    </main>
     <time id="time"></time>
     <h1 id="greeting"></h1>
     <h2 id="name" contenteditable="true"></h2>
     <h3 id="date">Thu nov 5 2020</h3>
-    <script src="./clock.jss"></script>
-  </body>
+    <script src="./script.jss"></script>
+</body>
 </html>
